# ChangeLog for dev-php/PECL-mailparse
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PECL-mailparse/ChangeLog,v 1.7 2004/12/30 20:39:02 ciaranm Exp $

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  30 May 2004; Bryan Østergaard <kloeri@gentoo.org>
  PECL-mailparse-2.0b.ebuild:
  Stable on alpha.

*PECL-mailparse-2.0b (28 Mar 2004)

  28 Mar 2004; Stuart Herbert <stuart@gentoo.org> PECL-mailparse-2.0b.ebuild:
  Version bump, to pick up fixes for compile problems

*PECL-mailparse-0.9.3-r1 (21 Oct 2003)

  21 Oct 2003; Tal Peer <coredumb@gentoo.org> PECL-mailparse-0.9.3-r1.ebuild:
  Use new PECL eclass.

*PECL-mailparse-0.9.3 (30 Jul 2003)
  
  13 Sep; Tal Peer <coredumb@gentoo.org> PECL-mailparse-0.9.3.ebuild:
  Bump to stable.

  30 Jul 2003; Tal Peer <coredumb@gentoo.org> PECL-mailparse-0.9.3.ebuild:
  Initial import.