@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PECL-mailparse/PECL-mailparse-2.0b.ebuild,v 1.3 2004/06/25 01:22:43 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PECL-mailparse/PECL-mailparse-2.0b.ebuild,v 1.4 2005/02/18 08:44:00 sebastian Exp $
 
 PHP_EXT_ZENDEXT="no"
 PHP_EXT_INI="yes"
