@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PECL-mailparse/PECL-mailparse-0.9.3-r1.ebuild,v 1.4 2005/02/18 08:44:00 sebastian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PECL-mailparse/PECL-mailparse-2.1.ebuild,v 1.1 2005/02/18 08:44:00 sebastian Exp $
 
 PHP_EXT_ZENDEXT="no"
 PHP_EXT_INI="yes"
@@ -11,7 +11,7 @@ IUSE=""
 DESCRIPTION="A PHP extension for parsing and working with RFC822 and RFC2045 (MIME) compliant messages."
 SLOT="0"
 LICENSE="PHP"
-KEYWORDS="x86 ~ppc ~alpha ~sparc"
+KEYWORDS="~x86 ~ppc ~alpha ~sparc"
 
 src_install() {
 	php-ext-pecl_src_install
