@@ -1,6 +1,12 @@
 # ChangeLog for dev-php/PECL-mailparse
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PECL-mailparse/ChangeLog,v 1.7 2004/12/30 20:39:02 ciaranm Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PECL-mailparse/ChangeLog,v 1.8 2005/02/18 08:44:00 sebastian Exp $
+
+*PECL-mailparse-2.1 (18 Feb 2005)
+
+  18 Feb 2005; Sebastian Bergmann <sebastian@gentoo.org>
+  +PECL-mailparse-2.1.ebuild:
+  Version bump.
 
   30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
   Change encoding to UTF-8 for GLEP 31 compliance
